styles.css
:root {
  --u4-green: #577d30;
  --u4-black: #424747;
  --u4-white: #ffffff;
  --u4-blue: #4177a9;
  --u4-gray: #f5f6f6;
}

* {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.1rem;
  box-sizing: border-box;
}

*:focus {
  outline: auto;
  outline-color: var(--u4-blue);
  outline-offset: 2px;
  outline-style: solid;
  outline-width: 2px;
}

.tab-wrapper {
  display: inline-block;
  margin-right: 10px; 
  background-color: var(--u4-blue);
  color: var(--u4-white);
  padding: 10px;
  margin: 5px;
  border: 1px solid var(--u4-black);
}

.selected {
  border-top: 5px solid var(--u4-black);
  background-color: var(--u4-green);

}

.tab-wrapper > button {
  background-color: inherit;
  color: inherit;
  border-color: transparent;
}

.tab-wrapper > button:hover,
button.tab-wrapper:hover {
  background-color: var(--u4-white);
  color: var(--u4-black);
}

.tab-wrapper > button:focus,
button.tab-wrapper:focus {
  outline: auto;
  outline-style: solid;
  outline-width: 4px;
  outline-color: var(--u4-white);
}

.tab-wrapper.selected > button:focus,
button.tab-wrapper:focus {
  outline-color: var(--u4-black);
}

.close-tab-button {
  
}

[role="tabpanel"] {
  border: 1px solid var(--u4-black);
  padding: 10px;
  margin: 3px;
}

section {
  margin: 20px;
  margin-bottom: 40px;
  width: 80%;
  max-width: 750px;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.1rem;
}

